Add jl::RingBuffer benchmark

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,22 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 option(JL_ENABLE_TESTING "Enable testing of the jl library." ON)
 
-add_definitions(-Wall -Wextra -fno-omit-frame-pointer -g3 -fstack-protector)
-
 add_library(jl INTERFACE)
 target_include_directories(jl INTERFACE include/)
 
+add_definitions(-Wall -Wextra)
+
+set(BENCHMARK_ENABLE_TESTING OFF)
+if(JL_ENABLE_TESTING AND EXISTS ${CMAKE_SOURCE_DIR}/external/benchmark/CMakeLists.txt)
+  add_subdirectory(external/benchmark)
+  add_subdirectory(benchmark)
+endif()
+
 if(JL_ENABLE_TESTING AND EXISTS ${CMAKE_SOURCE_DIR}/external/googletest/CMakeLists.txt)
+  set(SANITIZE_FLAGS -fsanitize=undefined,address)
+  add_compile_options(${SANITIZE_FLAGS})
+  add_link_options(${SANITIZE_FLAGS})
+  add_definitions(-fno-omit-frame-pointer -g3 -fstack-protector)
   add_subdirectory(external/googletest)
   enable_testing()
   add_subdirectory(test)
