--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(ring_buffer ring_buffer.cpp)
-target_link_libraries(ring_buffer jl benchmark)
+add_executable(circular_buffer circular_buffer.cpp)
+target_link_libraries(circular_buffer jl benchmark)
