--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,20 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.20)
 
 project(
   jl
   VERSION 0.1.0
   LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 option(JL_ENABLE_TESTING "Enable testing of the jl library." ON)
 
 add_library(jl INTERFACE)
 target_include_directories(jl INTERFACE include/)
+target_compile_features(jl INTERFACE cxx_std_23)
 
 add_definitions(-Wall -Wextra -march=native)
+add_definitions(-std=c++2b) # because clang16 does not officially support 23 yet
 
 set(BENCHMARK_ENABLE_TESTING OFF)
 if(JL_ENABLE_TESTING AND EXISTS
