Switch to the gnu++2b (i.e. unreleased c++23) standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,10 @@ project(
   VERSION 0.1.0
   LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+add_compile_options("-std=gnu++2b") # 23 not supported by clang15
 
 option(JL_ENABLE_TESTING "Enable testing of the jl library." ON)
 
