Add a jl::defer utility
Also generalize ErrorHandling tests instead of focusing on ErrnoAsError,
and move error handling related function to the top of jl.h, because
other methods are likely to depend on them than the other way around.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(
   run_test
   bit_test.cpp
   environment_test.cpp
-  errno_as_error_test.cpp
+  error_handling_test.cpp
   fd_mmap_test.cpp
   circular_buffer_test.cpp
   strings_test.cpp
