--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -13,5 +13,8 @@ target_link_libraries(unique_socket jl benchmark)
 add_executable(copy copy.cpp)
 target_link_libraries(copy jl benchmark)
 
+add_executable(span span.cpp)
+target_link_libraries(span jl benchmark)
+
 add_executable(splice splice.cpp)
 target_link_libraries(splice jl benchmark)
