Decouple CircularBuffer from the RingIndex operations
BM_Singlethreaded<uint64_t>_mean                             0.649 ns        0.640 ns            3 Throughput=1.56246G/s
BM_Singlethreaded<uint64_t>_cv                                2.10 %          1.01 %             3 Throughput=1.00%
BM_Singlethreaded<std::atomic<uint64_t>>_mean                 16.1 ns         15.9 ns            3 Throughput=62.9713M/s
BM_Singlethreaded<std::atomic<uint64_t>>_cv                   1.12 %          0.31 %             3 Throughput=0.31%
BM_SinglethreadedFetchAdd<uint64_t>_mean                     0.652 ns        0.652 ns            3 Throughput=1.53439G/s
BM_SinglethreadedFetchAdd<uint64_t>_cv                        0.26 %          0.26 %             3 Throughput=0.26%
BM_SinglethreadedFetchAdd<std::atomic<uint64_t>>_mean         16.5 ns         16.3 ns            3 Throughput=61.2789M/s
BM_SinglethreadedFetchAdd<std::atomic<uint64_t>>_cv           1.56 %          0.69 %             3 Throughput=0.69%
BM_Multithreaded_mean                                         38.2 ns         38.2 ns            3 Throughput=26.1617M/s
BM_Multithreaded_cv                                           0.08 %          0.07 %             3 Throughput=0.07%
BM_MultithreadedFetchAdd_mean                                 39.2 ns         39.1 ns            3 Throughput=25.562M/s
BM_MultithreadedFetchAdd_cv                                   1.66 %          1.64 %             3 Throughput=1.63%
BM_MultithreadedEagerConsumer_mean                            50.4 ns         50.4 ns            3 Throughput=19.8494M/s
BM_MultithreadedEagerConsumer_cv                              0.24 %          0.24 %             3 Throughput=0.24%
BM_MultithreadedEagerProducer_mean                            50.7 ns         50.7 ns            3 Throughput=19.7378M/s
BM_MultithreadedEagerProducer_cv                              0.66 %          0.66 %             3 Throughput=0.66%

BM_ParallelCircularBufferRWFullData/BurstSize:1_me

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -19,6 +19,9 @@ target_link_libraries(copy jl benchmark)
 add_executable(mmap mmap.cpp)
 target_link_libraries(mmap jl benchmark)
 
+add_executable(ring_index ring_index.cpp)
+target_link_libraries(ring_index jl benchmark)
+
 add_executable(span span.cpp)
 target_link_libraries(span jl benchmark)
 
