--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -13,6 +13,9 @@ target_link_libraries(unique_socket jl benchmark)
 add_executable(copy copy.cpp)
 target_link_libraries(copy jl benchmark)
 
+add_executable(mmap mmap.cpp)
+target_link_libraries(mmap jl benchmark)
+
 add_executable(span span.cpp)
 target_link_libraries(span jl benchmark)
 
