Add CURL* and CURLM* wrappers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 option(JL_ENABLE_TESTING "Enable testing of the jl library." ON)
 
-add_library(jl INTERFACE)
+add_library(jl INTERFACE include/jl.h)
 target_include_directories(jl INTERFACE include/)
 target_compile_features(jl INTERFACE cxx_std_23)
+
+add_library(jl_curl INTERFACE include/jl_curl.h)
+target_link_libraries(jl_curl INTERFACE jl curl)
 
 add_definitions(-Wall -Wextra -march=native)
 
