--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(
-  run_test
+  jl_test
   bit_test.cpp
   environment_test.cpp
   error_handling_test.cpp
@@ -14,5 +14,12 @@ add_executable(
   unique_addr_test.cpp
   unique_socket_test.cpp
   test.cpp)
-target_link_libraries(run_test jl doctest)
-add_test(all_tests run_test)
+target_link_libraries(jl_test jl doctest)
+add_test(all_tests jl_test)
+
+add_executable(
+  jl_curl_test
+  curl_test.cpp
+  test.cpp)
+target_link_libraries(jl_curl_test jl_curl doctest)
+add_test(all_tests jl_curl_test)
