Benchmark curlm readding and dummy requests
    BM_CURLMReleaseAndReaddHandles/1_cv     real=58.0ns      (5.10%)  cpu=56.8ns      (1.98%)  n=3
    BM_CURLMReleaseAndReaddHandles/8_cv     real=518ns       (1.81%)  cpu=512ns       (0.52%)  n=3
    BM_CURLMReleaseAndReaddHandles/64_cv    real=4789ns      (2.24%)  cpu=4758ns      (1.82%)  n=3
    BM_CURLMReleaseAndReaddHandles/512_cv   real=45556ns     (4.30%)  cpu=44256ns     (0.90%)  n=3
    BM_CURLMReleaseAndReaddHandles/4096_cv  real=590959ns    (2.09%)  cpu=586370ns    (1.45%)  n=3
    BM_CURLMEmptyFileRequests/1_cv          real=4129ns      (0.12%)  cpu=4101ns      (0.87%)  n=3
    BM_CURLMEmptyFileRequests/8_cv          real=30367ns     (0.98%)  cpu=30006ns     (0.54%)  n=3
    BM_CURLMEmptyFileRequests/64_cv         real=239589ns    (2.36%)  cpu=238000ns    (2.62%)  n=3
    BM_CURLMEmptyFileRequests/512_cv        real=2512873ns   (1.40%)  cpu=2497083ns   (0.60%)  n=3
    BM_CURLMEmptyFileRequests/4096_cv       real=74805348ns  (0.98%)  cpu=73876764ns  (0.33%)  n=3

I tried some benchmarks bypassing the jl::curl::multi/curlm interfaces,
and the overhead in comparison to the CURL library is more or less
negligible (upto about 10%) considering that file:///dev/null is a lot
less work than realistic CURL requests.

The sublinear performance from 512 to 4096 concurrent handles is
probably related to some linear search/scan or something internally in
the curl_multi_add/remove_handle logic. It is still present if I pop all
the curl_multi_info_read responses, and one by one readd those manually,
but it goes away if I readd the handles in the original insertion order.

I also tried to be clever and presume that callers will reuse CURL
handles, so just leave moved-from objects in the map without erasing
them. That did not make any significant difference (if any worse):

    @@ -245 +245 @@ class curlm {
    -    return _curls.emplace(p, std::move(curl)).first->second;
    +    return _curls[p] = std::move(curl);
    @@ -2

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_executable(circular_buffer circular_buffer.cpp)
 target_link_libraries(circular_buffer jl benchmark)
 
+add_executable(curl_benchmark curl.cpp)
+target_link_libraries(curl_benchmark jl_curl benchmark)
+
 add_executable(fixed_string fixed_string.cpp)
 target_link_libraries(fixed_string jl benchmark)
 
