--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -10,6 +10,9 @@ target_link_libraries(fixed_string jl benchmark)
 add_executable(strings strings.cpp)
 target_link_libraries(strings jl benchmark)
 
+add_executable(math math.cpp)
+target_link_libraries(math benchmark)
+
 add_executable(unique_socket unique_socket.cpp)
 target_link_libraries(unique_socket jl benchmark)
 
