Extract jl_posix.h from jl.h
That is those parts that relay on the POSIX library. This leaves jl.h to
only depend on the C++ standard.

Also reorganize tests in a similar manner.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ add_library(jl INTERFACE include/jl.h)
 target_include_directories(jl INTERFACE include/)
 target_compile_features(jl INTERFACE cxx_std_23)
 
+add_library(jl_posix INTERFACE include/jl_posix.h)
+target_link_libraries(jl_posix INTERFACE jl)
+
 add_library(jl_curl INTERFACE include/jl_curl.h)
 target_link_libraries(jl_curl INTERFACE jl curl)
 
