--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(circular_buffer circular_buffer.cpp)
-target_link_libraries(circular_buffer jl benchmark)
+target_link_libraries(circular_buffer jl_posix benchmark)
 
 add_executable(curl_benchmark curl.cpp)
 target_link_libraries(curl_benchmark jl_curl benchmark)
@@ -14,13 +14,13 @@ add_executable(math math.cpp)
 target_link_libraries(math benchmark)
 
 add_executable(unique_socket unique_socket.cpp)
-target_link_libraries(unique_socket jl benchmark)
+target_link_libraries(unique_socket jl_posix benchmark)
 
 add_executable(copy copy.cpp)
-target_link_libraries(copy jl benchmark)
+target_link_libraries(copy jl_posix benchmark)
 
 add_executable(mmap mmap.cpp)
-target_link_libraries(mmap jl benchmark)
+target_link_libraries(mmap jl_posix benchmark)
 
 add_executable(ring_index ring_index.cpp)
 target_link_libraries(ring_index jl benchmark)
@@ -29,4 +29,7 @@ add_executable(span span.cpp)
 target_link_libraries(span jl benchmark)
 
 add_executable(splice splice.cpp)
-target_link_libraries(splice jl benchmark)
+target_link_libraries(splice jl_posix benchmark)
+
+add_executable(time time.cpp)
+target_link_libraries(time jl benchmark)
