--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,8 +3,6 @@ add_executable(
   bit_test.cpp
   environment_test.cpp
   error_handling_test.cpp
-  fd_mmap_test.cpp
-  circular_buffer_test.cpp
   misc_test.cpp
   ring_test.cpp
   rows_test.cpp
@@ -13,17 +11,22 @@ add_executable(
   strings_test.cpp
   synchronization_test.cpp
   time_test.cpp
-  unique_fd_test.cpp
-  unique_mmap_test.cpp
-  unique_addr_test.cpp
-  unique_socket_test.cpp
   test.cpp)
 target_link_libraries(jl_test jl doctest)
 add_test(jl_test jl_test)
 
 add_executable(
-  jl_curl_test
-  curl_test.cpp
+  jl_posix_test
+  posix/circular_buffer_test.cpp
+  posix/fd_mmap_test.cpp
+  posix/unique_fd_test.cpp
+  posix/unique_mmap_test.cpp
+  posix/unique_addr_test.cpp
+  posix/unique_socket_test.cpp
   test.cpp)
-target_link_libraries(jl_curl_test jl_curl doctest)
+target_link_libraries(jl_posix_test jl_posix doctest)
+add_test(jl_posix_test jl_posix_test)
+
+add_executable(jl_curl_test curl/curl_test.cpp test.cpp)
+target_link_libraries(jl_curl_test jl_curl jl_posix doctest)
 add_test(jl_curl_test jl_curl_test)
