Add mean/stddev calculators and peak trackers

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(
   rows_test.cpp
   rw_loop_test.cpp
   span_test.cpp
+  stats_test.cpp
   strings_test.cpp
   synchronization_test.cpp
   time_test.cpp
