--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,3 +33,13 @@ if (${CURL_FOUND})
   target_link_libraries(jl_curl_test jl_curl jl_posix doctest)
   add_test(jl_curl_test jl_curl_test)
 endif()
+
+add_executable(jl_db_test db/mock_test.cpp test.cpp)
+if (${PostgreSQL_FOUND})
+  target_sources(jl_db_test PRIVATE db/psql_test.cpp)
+endif()
+if (${SQLite3_FOUND})
+  target_sources(jl_db_test PRIVATE db/sqlite_test.cpp)
+endif()
+target_link_libraries(jl_db_test jl_db doctest)
+add_test(jl_db_test jl_db_test)
