--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,8 +1,10 @@
 add_executable(circular_buffer circular_buffer.cpp)
 target_link_libraries(circular_buffer jl_posix benchmark)
 
-add_executable(curl_benchmark curl.cpp)
-target_link_libraries(curl_benchmark jl_curl benchmark)
+if (${CURL_FOUND})
+  add_executable(curl_benchmark curl.cpp)
+  target_link_libraries(curl_benchmark jl_curl benchmark)
+endif()
 
 add_executable(fixed_string fixed_string.cpp)
 target_link_libraries(fixed_string jl benchmark)
