--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ add_library(jl_posix INTERFACE include/jl_posix.h)
 target_link_libraries(jl_posix INTERFACE jl)
 
 find_package(CURL)
-if (${CURL_FOUND})
+if(${CURL_FOUND})
   add_library(jl_curl INTERFACE include/jl_curl.h)
   target_link_libraries(jl_curl INTERFACE jl curl)
 endif()
@@ -27,13 +27,14 @@ endif()
 find_package(SQLite3)
 find_package(PostgreSQL)
 add_library(jl_db INTERFACE include/jl_db.h)
-if (${SQLite3_FOUND})
+if(${SQLite3_FOUND})
   target_compile_definitions(jl_db INTERFACE -DJL_HAS_SQLITE=1)
 endif()
-if (${PostgreSQL_FOUND})
+if(${PostgreSQL_FOUND})
   target_compile_definitions(jl_db INTERFACE -DJL_HAS_PSQL=1)
 endif()
-target_link_libraries(jl_db INTERFACE jl ${PostgreSQL_LIBRARIES} ${SQLite3_LIBRARIES})
+target_link_libraries(jl_db INTERFACE jl ${PostgreSQL_LIBRARIES}
+                                      ${SQLite3_LIBRARIES})
 
 set(BENCHMARK_ENABLE_TESTING OFF)
 if(JL_ENABLE_TESTING AND EXISTS
